--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,36 +13,39 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
+          - target: x86_64-unknown-linux-gnu
+            platform: linux/amd64
+            archive: tar.gz
+          - target: aarch64-unknown-linux-gnu
+            platform: linux/arm64
             archive: tar.gz
 
-    runs-on: ${{ matrix.os }}
-    container:
-      image: ghcr.io/gtk-rs/gtk4-rs/gtk4:latest
+    runs-on: ubuntu-latest
 
     permissions:
       contents: write
 
     steps:
-      - name: Install dependencies
-        if: matrix.os == 'ubuntu-latest'
-        run: yum install -y gtk4-devel libadwaita-devel
-
       - uses: actions/checkout@v3
 
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Cache Dependencies
-        uses: Swatinem/rust-cache@v2
-
-      - name: Build
-        run: cargo build --release --locked --target ${{ matrix.target }}
+      - name: Build in container
+        run: |
+          docker run --rm --platform ${{ matrix.platform }} \
+            -v ${{ github.workspace }}:/workspace \
+            -w /workspace \
+            -e CARGO_TERM_COLOR=always \
+            ghcr.io/gtk-rs/gtk4-rs/gtk4:latest \
+            bash -c "
+              yum install -y gtk4-devel libadwaita-devel && \
+              curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable && \
+              source \$HOME/.cargo/env && \
+              cargo build --release --locked --target ${{ matrix.target }}
+            "
 
       - name: Pack Artifacts
-        if: matrix.os == 'ubuntu-latest'
         env:
           RELEASE_NAME: satty-${{ matrix.target }}
           ARTIFACTS_DIR: target/${{ matrix.target }}/release
