--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   release:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - target: x86_64-unknown-linux-gnu
@@ -29,6 +30,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up QEMU
+        if: matrix.platform == 'linux/arm64'
         uses: docker/setup-qemu-action@v3
 
       - name: Build in container
@@ -48,7 +50,6 @@ jobs:
       - name: Pack Artifacts
         env:
           RELEASE_NAME: satty-${{ matrix.target }}
-          ARTIFACTS_DIR: target/${{ matrix.target }}/release
         run: |
           mkdir $RELEASE_NAME
           cp target/${{ matrix.target }}/release/satty -t $RELEASE_NAME
