--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,13 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             platform: linux/amd64
+            image: ghcr.io/gtk-rs/gtk4-rs/gtk4:latest
+            pkg_install: yum install -y gtk4-devel libadwaita-devel
             archive: tar.gz
           - target: aarch64-unknown-linux-gnu
             platform: linux/arm64
+            image: fedora:latest
+            pkg_install: dnf install -y gtk4-devel libadwaita-devel gcc
             archive: tar.gz
 
     runs-on: ubuntu-latest
@@ -39,9 +43,9 @@ jobs:
             -v ${{ github.workspace }}:/workspace \
             -w /workspace \
             -e CARGO_TERM_COLOR=always \
-            ghcr.io/gtk-rs/gtk4-rs/gtk4:latest \
+            ${{ matrix.image }} \
             bash -c "
-              yum install -y gtk4-devel libadwaita-devel && \
+              ${{ matrix.pkg_install }} && \
               curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable && \
               source \$HOME/.cargo/env && \
               cargo build --release --locked --target ${{ matrix.target }}
