--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,8 @@ jobs:
             archive: tar.gz
           - target: aarch64-unknown-linux-gnu
             platform: linux/arm64
-            image: fedora:latest
-            pkg_install: dnf install -y gtk4-devel libadwaita-devel gcc
+            image: ghcr.io/gtk-rs/gtk4-rs/gtk4:latest
+            pkg_install: yum install -y gtk4-devel libadwaita-devel
             archive: tar.gz
 
     runs-on: ubuntu-latest
